<resources>
    <string name="app_name">Shoppy</string>

    <string name="color">Color:</string>
    <string name="font_size">Font Size:</string>
    <string name="SophDefaultString">empty</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="pink">Pink</string>
    <string name="black">Black</string>
    <string name="date">Date</string>
    <string name="store">Store</string>
    <string name="brand">Brand</string>
    <string name="lowest_price">Lowest price</string>
    <string name="average_price">Average price</string>
    <string name="highest_price">Highest price</string>
    <string name="start_fresh">Start Fresh</string>
    <string name="display">Display:</string>
    <string name="sort_by">Sort by:</string>
    <string name="oldest_purchase">Oldest Purchase</string>
    <string name="price_average">Price: Average</string>
    <string name="price_lowest">Price: Lowest</string>
    <string name="price_highest">Price: Highest</string>
    <string name="most_recent_purchase">Most Recent Purchase</string>
    <string name="name">Name</string>
    <string name="frequency">Frequency</string>
    <string name="averagePrice">Average Price</string>
    <string name="lowestPrice">Lowest Price</string>
    <string name="name_alphabetical">Name: Alphabetical</string>
    <string name="frequency_lowest_to_highest">Frequency: Lowest to Highest</string>
    <string name="frequency_highest_to_lowest">Frequency: Highest to Lowest</string>
    <string name="total_spent_lowest_to_highest">Total Spent: Lowest to Highest</string>
    <string name="total_spent_highest_to_lowest">Total Spent: Highest to Lowest</string>
    <string name="total_spent">Total Spent</string>
    <string name="store_alphabetical">Store: Alphabetical</string>
    <string name="brand_alphabetical">Brand: Alphabetical</string>
</resources>
