<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MasterListFilters">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/display"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <CheckBox
        android:id="@+id/Frequency"
        android:layout_width="97dp"
        android:layout_height="45dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/frequency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"/>

    <CheckBox
        android:id="@+id/AvgPrice"
        android:layout_width="132dp"
        android:layout_height="32dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/averagePrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Frequency"/>

    <CheckBox
        android:id="@+id/LowestPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/lowestPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AvgPrice"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/sort_by"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="144dp"
        android:layout_height="329dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/NameAlphabetical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/name_alphabetical" />

        <RadioButton
            android:id="@+id/FrequencyLH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/frequency_lowest_to_highest" />

        <RadioButton
            android:id="@+id/FrequencyHL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/frequency_highest_to_lowest" />

        <RadioButton
            android:id="@+id/Lowest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:text="@string/lowestPrice" />

        <RadioButton
            android:id="@+id/TotalLH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/total_spent_lowest_to_highest" />

        <RadioButton
            android:id="@+id/TotalHL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/total_spent_highest_to_lowest" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/TotalSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/total_spent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LowestPrice" />

    <Button
        android:id="@+id/applyfilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply Filters"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="503dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textView"
        app:layout_constraintRight_toLeftOf="@id/textView4"/>

</android.support.constraint.ConstraintLayout>