<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Filters">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="55dp"
        android:text="@string/display"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:clickable="true"
        android:onClick="onCheckBoxClicked"
        android:text="Brand"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/size"
        android:layout_width="108dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:clickable="true"
        android:onClick="onCheckBoxClicked"
        android:text="Size"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand" />

    <CheckBox
        android:id="@+id/frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:clickable="true"
        android:onClick="onCheckBoxClicked"
        android:text="Frequency"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size" />

    <CheckBox
        android:id="@+id/avgPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:clickable="true"
        android:onClick="onCheckBoxClicked"
        android:text="Average Price"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frequency" />

    <CheckBox
        android:id="@+id/lowestPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:clickable="true"
        android:onClick="onCheckBoxClicked"
        android:text="Lowest Price"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgPrice" />

    <CheckBox
        android:id="@+id/highestPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:clickable="true"
        android:onClick="onCheckBoxClicked"
        android:text="Highest Price"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowestPrice" />

    <CheckBox
        android:id="@+id/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:clickable="true"
        android:onClick="onCheckBoxClicked"
        android:text="Store"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highestPrice" />

    <CheckBox
        android:id="@+id/totalSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:clickable="true"
        android:onClick="onCheckBoxClicked"
        android:text="Total Spent"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store" />

    <CheckBox
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:clickable="true"
        android:onClick="onCheckBoxClicked"
        android:text="Date"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalSpent"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="30dp"
        android:text="@string/sort_by"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="164dp"
        android:layout_height="375dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/MostRecentPurchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="onRadioClicked"
            android:text="@string/most_recent_purchase"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/OldestPurchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="onRadioClicked"
            android:text="@string/oldest_purchase"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/StoreAlephabetical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="onRadioClicked"
            android:text="@string/store_alphabetical"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/BrandAlephabetical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="onRadioClicked"
            android:text="@string/brand_alphabetical"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/PriceAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="onRadioClicked"
            android:text="@string/price_average"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


        <RadioButton
            android:id="@+id/PriceLowest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="onRadioClicked"
            android:text="@string/price_lowest"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/PriceHeighest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="onRadioClicked"
            android:text="@string/price_highest"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/applyFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply Filters"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="503dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textView"
        app:layout_constraintRight_toLeftOf="@id/textView4"/>

</android.support.constraint.ConstraintLayout>